# llm-course-sidecar

./: .env.example  .gitignore  README.md  TASK-code-editor-support.md  TASK-full-chapter-bundle.md  pyproject.toml
.github/workflows/: build-and-upload-bundle.yml
.metadata/experts/: yellow_page.generated.json
docs/: api_contract_v1.md  chapter_bundle_spec.md  sidecar_implementation_plan.md
experts/concept_explainer/: principles.md
experts/data_inspector/: principles.md
experts/data_inspector/knowledge/: pandas_dtypes_reference.md
experts/data_inspector/skills/: check_suitability.md  inspect_dataset.md
scripts/: build_chapter_bundle.py  build_dev_sidecar_bundle.py  build_sidecar_code_bundle.py  restore_content_chapter_files.py
src/sidecar/: __init__.py  config.py  main.py
src/sidecar/agents/: companion.prompt.md  memo.prompt.md  roadmap_manager.prompt.md  roadmap_manager_phase2.prompt.md
src/sidecar/contracts/: README_SCHEMAS.md  concept_explanation_schema_v3.0.json  consultation_guide_schema_v3.0.json  consulting_envelope_schema_v3.0.json  dataset_overview_report_schema_v3.0.json  expert_report_schema_v3.0.json  instruction_packet.schema.json  memo_digest.schema.json  session_state.schema.json  skill_call_log_schema_v3.0.json  suitability_judgment_schema_v3.0.json  turn_outcome.schema.json
src/sidecar/default_templates/: dynamic_report_template.md  final_learning_report_template.md  (+1 more)
tests/: conftest.py  test_api_parity.py  test_bundle_resolution.py  test_e2e_sidecar_interaction.py  test_orchestrator_code_context.py  test_workspace_api.py
(+24 files in other folders)
