[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-course-sidecar"
version = "0.1.0"
description = "Local Python sidecar runtime for llm-course desktop"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0,<0.120.0",
  "uvicorn[standard]>=0.27.0,<0.35.0",
  "pydantic>=2.5.3,<3.0.0",
  "pydantic-settings>=2.1.0,<3.0.0",
  "python-multipart>=0.0.6,<0.1.0",
  "httpx>=0.26.0,<0.28.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "jsonschema>=4.20.0,<5.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "filelock>=3.13.1,<4.0.0",
  "markdown>=3.5.2,<4.0.0",
  "pandas>=2.0.0,<3.0.0",
  "numpy>=1.24.0,<2.0.0",
  "openpyxl>=3.1.0,<4.0.0",
  "jupyter>=1.0.0",
  "notebook>=7.0.0",
  "ipykernel>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<0.25.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

